--- a/src/pl/lublin/wsei/java/cwiczenia/gusInfoGraphic.fxml
+++ b/src/pl/lublin/wsei/java/cwiczenia/gusInfoGraphic.fxml
@@ -3,13 +3,22 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-
+<?import javafx.scene.text.Text?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.lublin.wsei.java.cwiczenia.Controller">
    <children>
-      <Button layoutX="140.0" layoutY="101.0" mnemonicParsing="false" onAction="#btnOpenFileAction" text="Otwórz plik" textFill="RED" />
-      <Label fx:id="lbFile" layoutX="290.0" layoutY="105.0" prefHeight="17.0" prefWidth="425.0" style="-fx-font-style: italic;" text="Proszę wczytać plik ..." />
-      <ListView fx:id="lstInfografiki" layoutX="140.0" layoutY="174.0" prefHeight="464.0" prefWidth="349.0" />
+      <Button layoutX="77.0" layoutY="34.0" mnemonicParsing="false" onAction="#btnOpenFileAction" text="Otwórz plik" textFill="RED" />
+      <Label fx:id="lbFile" layoutX="227.0" layoutY="38.0" prefHeight="17.0" prefWidth="425.0" style="-fx-font-style: italic;" text="Proszę wczytać plik ..." />
+      <ListView fx:id="lstInfografiki" layoutX="77.0" layoutY="90.0" prefHeight="464.0" prefWidth="349.0" />
+       <Label layoutX="42.0" layoutY="569.0" text="Adres Strony:" />
+       <Button fx:id="btnPrzejdzDoStrony" layoutX="671.0" layoutY="591.0" mnemonicParsing="false" onAction="#btnZaladuj" prefHeight="25.0" prefWidth="77.0" text="Załaduj" />
+       <ImageView fx:id="imgMiniaturka" fitHeight="259.0" fitWidth="314.0" layoutX="462.0" layoutY="199.0" pickOnBounds="true" preserveRatio="true" />
+       <Label layoutX="462.0" layoutY="171.0" text="Miniaturka:" />
+       <Button fx:id="btnPokazInfografike" layoutX="671.0" layoutY="471.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="91.0" text="Pokaż" />
+       <TextField fx:id="txtAdresStrony" editable="false" layoutX="42.0" layoutY="591.0" prefHeight="25.0" prefWidth="616.0" />
+      <Text layoutX="78.0" layoutY="86.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Infografiki" />
    </children>
 </AnchorPane>
